@@ -217,6 +217,7 @@ static int db3_fsync_disable(/*@unused@*/ int fd)
     return 0;
 }
 
+#if 0
 #if HAVE_LIBPTHREAD
 #if HAVE_PTHREAD_H
 #include <pthread.h>
@@ -264,6 +265,7 @@ static int db3_pthread_nptl(void)
 	(void) pthread_cond_destroy(&cond);
     return ret;
 }
+#endif
 #endif
 
 /*@-moduncon@*/ /* FIX: annotate db3 methods */
@@ -990,6 +992,7 @@ static int db3open(rpmdb rpmdb, rpmTag rpmtag, dbiIndex * dbip)
      */
     if (dbi->dbi_use_dbenv) {
 
+#if 0
 #if HAVE_LIBPTHREAD
 	if (rpmdb->db_dbenv == NULL) {
 	    /* Set DB_PRIVATE if posix mutexes are not shared. */
@@ -999,6 +1002,7 @@ static int db3open(rpmdb rpmdb, rpmTag rpmtag, dbiIndex * dbip)
 		rpmMessage(RPMMESS_DEBUG, _("unshared posix mutexes found(%d), adding DB_PRIVATE, using fcntl lock\n"), xx);
 	    }
 	}
+#endif
 #endif
 
 	if (access(dbhome, W_OK) == -1) {
